--- a/SampleConsumer/kcl.properties
+++ b/SampleConsumer/kcl.properties
@@ -1,10 +1,13 @@
 # The script that abides by the multi-language protocol. This script will
 # be executed by the MultiLangDaemon, which will communicate with this script
 # over STDIN and STDOUT according to the multi-language protocol.
-executableName = dotnet SampleConsumer.dll
+executableName = dotnet /Volumes/workplace/kcl/amazon-kinesis-client-net/SampleConsumer/bin/Debug/netcoreapp6.0/SampleConsumer.dll
 
 # The name of an Amazon Kinesis stream to process.
 streamName = kclnetsample
+
+# The ARN of the Kinesis stream
+#streamARN = arn:aws:kinesis:us-east-1:123456789012:stream/kclnetsample
 
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
@@ -81,3 +84,6 @@ regionName = us-east-1
 # active threads set to the provided value. If a non-positive integer or no
 # value is provided a CachedThreadPool is used.
 #maxActiveThreads = 0
+
+# Polling or Fanout (default) are valid options that the KCL can use to establish the RetrievalConfig.
+# retrievalMode = Polling
